adds scripts as project scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,13 @@ dependencies = [
     "torchvision==0.22.0",
 ]
 
+[project.scripts]
+train = "isaac_so_arm101.scripts.rsl_rl.train:main"
+play = "isaac_so_arm101.scripts.rsl_rl.play:main"
+list_envs = "isaac_so_arm101.scripts.list_envs:main"
+zero_agent = "isaac_so_arm101.scripts.zero_agent:main"
+random_agent = "isaac_so_arm101.scripts.random_agent:main"
+
 [tool.uv]
 index-strategy = "unsafe-best-match"
 environments = [
